crates/cli/tests/snapshots/project_test__project__advanced_config.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
About ──────────────────────────────────────────────────────

  Project: advanced
  Source: advanced
  Toolchain: system
  Language: typescript
  Stack: frontend
  Layer: application
  Depends on: —

Configuration ──────────────────────────────────────────────

  Inherits from: —
  Tags:
    - react
  Environment variables: —
