crates/cli/tests/snapshots/project_test__project__empty_config.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
About ──────────────────────────────────────────────────────

  Project: empty-config
  Source: empty-config
  Toolchain: system
  Language: unknown
  Stack: unknown
  Layer: unknown
  Depends on: —

Configuration ──────────────────────────────────────────────

  Inherits from: —
  Tags: —
  Environment variables: —
